syntax = "proto2";

package magnon.config;

message GlobalConfig {
    optional string output_base_dir = 1;
    optional string cache_dir = 2;
}
